# IntelTBB_Examples

Example_1_philosophers/: CMakeLists.txt  Makefile  ReadMe.txt
Example_1_philosophers/src/: main.cpp
